--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack",
-		"build-dev": "webpack --webpack-config.dev.js"
+		"build-prod": "webpack --config webpack.config.prod.js"
 	},
 	"author": "Damian Dorocicz",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.11.6",
+		"@babel/preset-env": "^7.11.5",
 		"autoprefixer": "^9.8.6",
+		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^4.2.2",
 		"eslint": "^7.8.1",
@@ -27,6 +30,7 @@
 		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
-		"axios": "^0.20.0"
+		"axios": "^0.20.0",
+		"babel-polyfill": "^6.26.0"
 	}
 }
